--- a/AngularProject1/src/styles.css
+++ b/AngularProject1/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+/* body{
+    padding-left: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    background-image: url('assets/background11.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+} */
