@input decorator assignment

--- a/AngularProject1/src/app/app.component.html
+++ b/AngularProject1/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
-<app-attri></app-attri>
+<!-- 
+<app-attri></app-attri> -->
+<app-parent-comp></app-parent-comp>
