remove row assignment

--- a/AngularProject1/src/app/app.component.html
+++ b/AngularProject1/src/app/app.component.html
@@ -1,4 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- 
 <app-attri></app-attri> -->
-<app-parent-comp></app-parent-comp>
+<!-- <app-parent-comp></app-parent-comp> -->
+<!-- <select (change)="uid = sid.value" #sid>
+<option selected disabled>No value selected</option>
+<option [value]="id" *ngFor="let id of [1,2,3,4]" >{{id}}</option>
+</select>
+<div class="row">
+    <div class="col-md-12">
+<input type="text" (blur)="handleData($event)">
+<p>Praduct Name: <input type="text" placeholder="Enter Product Name" [(ngModel)]=""></p>
+<p>Praduct Price: <input type="text" placeholder="Enter Product Price" [(ngModel)]=""></p>
+<button class="btn btn-primary" (click)="updateProduct()">Update Product</button>
+</div>
+</div>
+<app-hooks [userid]="uid" [parentData]="data"></app-hooks> -->
+<!-- <app-hooks></app-hooks> -->
+<!-- <app-dirassign></app-dirassign> -->
+<app-remove-row></app-remove-row>
