--- a/AngularProject1/src/app/parent-comp/parent-comp.component.html
+++ b/AngularProject1/src/app/parent-comp/parent-comp.component.html
@@ -1,13 +1,13 @@
 
 
-<div>
+<!-- <div>
     <app-child-comp
       [emp1]="emp" (foodevent)="getDataFromChild($event)" (customerEvent)="getCustomersData($event)"></app-child-comp>
-</div>
+</div> -->
 <!-- <ul *ngFor="let f of foods">
   <li>{{f}}</li>
 </ul> -->
-
+<!-- 
 <div class="parentTable">
   <table>
       <tr *ngIf="!customers.length==0">
@@ -27,4 +27,4 @@
     <td>{{custD[i][0].custVehiNum}}</td>
   </tr>
 </table>
-</div>
+</div> -->
