--- a/AngularProject1/src/app/app.component.html
+++ b/AngularProject1/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- 
-<app-attri></app-attri> -->
+
+<!-- <app-attri></app-attri> -->
 <!-- <app-parent-comp></app-parent-comp> -->
 <!-- <select (change)="uid = sid.value" #sid>
 <option selected disabled>No value selected</option>
@@ -17,4 +17,8 @@
 <app-hooks [userid]="uid" [parentData]="data"></app-hooks> -->
 <!-- <app-hooks></app-hooks> -->
 <!-- <app-dirassign></app-dirassign> -->
-<app-remove-row></app-remove-row>
+<!-- <app-remove-row></app-remove-row> -->
+<!-- <app-simple-templateform></app-simple-templateform> -->
+<!-- <app-practiceparent></app-practiceparent> -->
+<!-- <app-directives></app-directives> -->
+<app-template-form></app-template-form>
