--- a/AngularProject1/src/app/demodirectives/demodirectives.component.html
+++ b/AngularProject1/src/app/demodirectives/demodirectives.component.html
@@ -53,7 +53,7 @@
                     <h2>You have not seleced any actor!</h2>
                 </div>
                 <div class="actorGallary" *ngSwitchCase="'Hrithik_Roshan'">
-                    <img class="imgActor" src="{{hrithik}}" alt="Hrithik Roshan" height="350px" width="320px">
+                    <img class="imgActor" src="assets/hrithik.png" alt="Hrithik Roshan" height="350px" width="320px">
                     <h2 class="nameActor">Hrithik <br> Roshan</h2>
                 </div>
                 <div class="actorGallary" *ngSwitchCase="'Mahesh_Babu'">
